Add sample environment configuration and update README with project details

--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,9 @@
 OPENAI_API_KEY=your-api-key
+# Estos datos se comparten dado que la base de datos es de prueba y tiene control por IP
+# No haga esto en un ambiente de producción
+DB_HOST=217.71.200.156
+DB_PORT=5433
+DB_NAME=esesa
+DB_USER=esesa
+DB_PASSWORD=esesa
+# Estos datos se comparten dado que la base de datos es de prueba y tiene control por IP
